--- a/service-front/app/languages/cy/LC_MESSAGES/messages.po
+++ b/service-front/app/languages/cy/LC_MESSAGES/messages.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2023-11-15T17:09:59+00:00\n"
+"POT-Creation-Date: 2023-11-21T13:42:06+00:00\n"
 "PO-Revision-Date: \n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -5165,15 +5165,15 @@ msgstr "Mae gan yr atwrneiaeth arhosol hon gyfarwyddiadau a/neu ddewisiadau"
 
 #: src/Common/templates/partials/full-lpa-display.html.twig:52
 msgid "This LPA has instructions and preferences"
-msgstr "Mae gan yr atwrneiaeth arhosol hon gyfarwyddiadau a dewisiadau"
+msgstr "Mae gan yr LPA hon gyfarwyddiadau neu ddymuniadau"
 
 #: src/Common/templates/partials/full-lpa-display.html.twig:54
 msgid "This LPA has preferences"
-msgstr "Mae gan yr atwrneiaeth arhosol hon ddewisiadau"
+msgstr "Mae gan yr LPA hon ddymuniadau"
 
 #: src/Common/templates/partials/full-lpa-display.html.twig:56
 msgid "This LPA has instructions"
-msgstr "Mae gan yr atwrneiaeth arhosol hon gyfarwyddiadau"
+msgstr "Mae gan yr LPA hon gyfarwyddiadau"
 
 #: src/Common/templates/partials/full-lpa-display.html.twig:75
 msgid ""
@@ -6515,6 +6515,22 @@ msgstr "Byddwn yn anfon eich allwedd cadarnhau cyfrif atoch drwy’r post."
 #: src/Common/templates/partials/lpa-summary-details/lpa-donor-details.html.twig:9
 msgid "Also known as"
 msgstr "A elwir hefyd yn"
+
+#: src/Actor/templates/actor/partials/lpa-instructions-preferences-important-message.html.twig:3
+msgid "This LPA has instructions.<br>"
+msgstr "Mae gan yr LPA hon gyfarwyddiadau.<br>"
+
+#: src/Actor/templates/actor/partials/lpa-instructions-preferences-important-message.html.twig:21
+msgid "This LPA has preferences.<br>"
+msgstr "Mae gan yr LPA hon ddymuniadau.<br>"
+
+#: src/Actor/templates/actor/partials/lpa-instructions-preferences-important-message.html.twig:39
+msgid "This LPA has instructions and preferences.<br>"
+msgstr "Mae gan yr LPA hon gyfarwyddiadau neu ddymuniadau.<br>"
+
+#: src/Actor/templates/actor/partials/lpa-instructions-preferences-important-message.html.twig:57
+msgid "This LPA has instructions and/or preferences.<br>"
+msgstr "Mae gan yr LPA hon gyfarwyddiadau a/neu ddymuniadau.<br>"
 
 #~ msgid ""
 #~ "If the scanned image is not readable, organisations may ask to see the "
